# av_base

./: .gitignore  readme.md
EncodeVideo/: encodeVideo.pro  rec_video.c  widget.h
audioResample/: arecord.c  arecord.h  myApp.pro  readme.md  videotest.h  widget.cpp  widget.h  widget.ui
audioResample/lib/: libavfilter.so.9  libavformat.so.59  libswresample.so.4.0.100  libswscale.so.6
docs/: 音频采集.md
include/libavutil/: ffversion.h
lib/: libavdevice.so.59  libavdevice.so.60  libavformat.so.60  libavformat.so.60.17.100  libavutil.so.57  libavutil.so.58  libpostproc.so.56  libswresample.so.4.13.100  libx264.so.164
project/: CMakeLists.txt
project/apps/: CMakeLists.txt
project/apps/EncodeVideo/: rec_video.c  rec_video.h  widget.cpp  widget.ui
project/apps/audioResample/: AppModuleManager.cpp  AppModuleManager.h  CMakeLists.txt  main.cpp  videotest.c
project/apps/audioResample/qml/: Main.qml
project/infra/audio/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  arecord.c
project/utils/: CMakeLists.txt  Public.h
